--- a/.github/workflows/zip-branch_ecomerece.yml
+++ b/.github/workflows/zip-branch_ecomerece.yml
@@ -1,58 +1,68 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
+# Workflow to Build and Deploy an ASP.NET Core App to Azure App Service
 name: Build and deploy ASP.Net Core app to Azure Web App - ecomerece
 
 on:
   push:
     branches:
-      - zip-branch
-  workflow_dispatch:
+      - zip-branch  # Trigger workflow on changes to the 'zip-branch'
+  workflow_dispatch:  # Allow manual workflow runs
 
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
-      contents: read #This is required for actions/checkout
+      contents: read  # Required for actions/checkout
 
     steps:
-      - uses: actions/checkout@v4
+      # Step 1: Check out the repository
+      - name: Checkout code
+        uses: actions/checkout@v4
 
+      # Step 2: Set up .NET Core SDK
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
           dotnet-version: '9.0'
 
+      # Step 3: Build the application
       - name: Build with dotnet
         run: dotnet build --configuration Release
 
+      # Step 4: Publish the application
       - name: dotnet publish
         run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/myapp
 
+      # Step 5: Create a zip package of the published files
+      - name: Create Zip Package
+        run: zip -r myapp.zip ${{env.DOTNET_ROOT}}/myapp
+
+      # Step 6: Upload the zip file as an artifact for the deploy job
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: .net-app
-          path: ${{env.DOTNET_ROOT}}/myapp
+          name: .net-app  # Artifact name
+          path: myapp.zip  # Path to the zip file
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build  # This job depends on the 'build' job
     environment:
-      name: 'Production'
+      name: 'Production'  # Azure environment (e.g., Production, Staging)
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-    
+
     steps:
+      # Step 7: Download the artifact from the build job
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: .net-app
-      
+          name: .net-app  # Artifact name to download
+
+      # Step 8: Deploy the zip package to Azure Web App
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'ecomerece'
-          slot-name: 'Production'
-          package: .
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FD7F9430A9EC41DAA5CEC349A69F0F3D }}
+          app-name: 'ecomerece'  # Replace with your Azure App Service name
+          slot-name: 'Production'  # Replace with your slot name (if applicable)
+          package: myapp.zip  # Path to the zip file
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE }}
